--- a/style.css
+++ b/style.css
@@ -99,16 +99,22 @@ p {
 .container {
     display: flex;
     justify-content: center;
-    flex: 1;
-    border: 1px solid pink;
-    max-width: 400px;
+    width: 900px;
+    height: 900px;
+    border: 1px solid #003049;
 }
 
 .box {
     border: 1px solid #003049;
-    min-height: 10px;
-    min-width: 10px;
+    padding: 1px;
+    flex-grow: 1;
 }
-
 .row {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+.box:hover {
+    background-color: #FF8400;
+
 }
