--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ a {
     padding: 4px;
     color: #FCB62C;
     border-bottom: 8px solid #FF8400;
+    font-weight: bold;
 }
 
 .submenu:hover {
@@ -96,7 +97,7 @@ p {
     justify-content: center;
 }
 
-.container {
+#grid {
     display: flex;
     justify-content: center;
     width: 900px;
@@ -106,15 +107,20 @@ p {
 
 .box {
     border: 1px solid #003049;
-    padding: 1px;
     flex-grow: 1;
 }
+
 .row {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
 }
-.box:hover {
-    background-color: #FF8400;
 
+/* .box:hover {
+    background-color: #FF8400;
+} */
+
+.coloured {
+    background-color: #DE1D1D;
+    
 }
